# real-esrgan-api

./: Dockerfile  Dockerfile.background  Dockerfile.generation  NOTICE.md  README.md  compose.test.yml  compose.yml  pyproject.toml
.github/workflows/: image-api.yml
app/: main.py
src/image_api/: app.py  config.py  generation.py  images.py  processing.py  state.py  store.py  workers.py
src/image_api_workers/: background.py  fake.py  fake_generation.py  generation_models.py  generation_worker.py  ideogram.py  upscale.py
tests/: test_8k_processing.py  test_background_worker_adapter.py  test_cutover_contract.py  test_dockerfile_build_contract.py  test_gateway.py  test_image_edits.py  test_longcat_contracts.py  test_longcat_unloading.py  test_processing_tasks.py  test_state_ownership.py  test_tiling_contract.py
