[project]
name = "image-api"
version = "1.0.0"
description = "Private-LAN image capability gateway"
license = "MIT"
license-files = ["LICENSE", "NOTICE.md", "licenses/*"]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=10,<12",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = ["mypy>=1.15,<2", "pytest>=8,<9", "ruff>=0.11,<1", "types-Pillow>=10,<12"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_api", "src/image_api_workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
  "basicsr.*",
  "cv2",
  "diffusers",
  "ideogram4",
  "ideogram4.*",
  "numpy",
  "realesrgan",
  "rembg_api.*",
  "torch",
]
ignore_missing_imports = true
